# ClincAI

./: .gitignore  README.md
ClinAI/: pyproject.toml
ClinAI/api/: .env.example  agent.py  config.py  database.py  llm.py  main.py  rag.py
ClinAI/frontend/: index.html
ClinAI/frontend-react/: index.html  package-lock.json  package.json  vite.config.ts
ClinAI/frontend-react/src/: App.tsx  EnterpriseWorkspace.tsx  api.ts  enterprise.css  main.tsx  style.css
scripts/: test_gemini_flash.py  test_keys.py
